css/root-styles.css
/* ... */
/*-- -------------------------- -->
<---           FOOTER           -->
<--- -------------------------- -*/

/* 
                               Contact
*/

.clippy-sales {
    height: 200px;
    width: 100%;
    background: var(--primary);
    -webkit-clip-path: polygon(0 86%, 0 100%, 100% 100%, 100% 86%, 50% 98%);
            clip-path: polygon(0 86%, 0 100%, 100% 100%, 100% 86%, 50% 98%);
    position: absolute;
    bottom: 0px;
}

#contact {
    background: var(--primary);
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    height: 150px;
}

.contact-group {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    height: auto;
}

.contact-group h2 {
    margin-top: 0;
    font-size: 1.25em;
}

.contact-group button {
    margin-top: 10px;
    margin-bottom: 0;
    font-weight: 900;
    width: auto;
}

.contact-button:before,
.contact-button:after {
    border-color: #000;
}

/*-- -------------------------- -->
<---        MOBILE FOOTER       -->
<--- -------------------------- -*/

footer {
    background: url("../images/blueprint.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    height: auto;
}

.footer-item {
    margin-bottom: 50px;
}

.footer-item:nth-child(2) {
    width: 250px;
    margin-top: 40px;
    height: 250px;
}

.footer-item:nth-child(2) a {
    margin-bottom: 10px;
}

.footer-item:first-child {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    margin: 0;
    padding-top: 50px;
}

.footer-location-info p {
    width: 220px;
}

.footer-item h3 {
    text-align: left;
    color: #fff;
    font-size: 1.1875em;
    font-weight: 500;
    height: auto;
    margin-bottom: 0;
}

.footer-item p {
    color: #fff;
    font-size: 0.9375em;
    margin: 0;
}

.footer-item a {
    color: #fff;
    font-size: 0.9375em;
    margin: 0;
    float: left;
    text-decoration: none;
    display: block;
    margin-right: 80px;
    font-family: 'Poppins', sans-serif;
}

.item-line {
    height: 2px;
    width: 70%;
    background: #fff;
    margin: 7px 0;
    margin-bottom: 20px;
}

.footer-dark {
    position: absolute;
    height: 100%;
    width: 100%;
    background: #000;
    opacity: .9;
    z-index: 5;
}

.footer-content {
    position: relative;
    z-index: 6;
}

.footer-content img {
    width: 250px;
    height: auto;
    margin-top: 50px;
    position: relative;
    left: 0;
    margin-bottom: 40px;
}

.valley-footer-icon i {
    color: var(--primary);
    margin-right: 15px;
    font-size: 1.25em;
    margin-top: 5px;
}

.uppercase {
    text-transform: capitalize;
    font-weight: bold;
}

.location {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -webkit-box-align: flex-start;
        -ms-flex-align: flex-start;
            align-items: flex-start;
    margin-bottom: 20px;
}

.branding-line {
    width: 100%;
    height: 2px;
    background: #fff;
    margin: 0px 0 15px 0;
    position: relative;
    z-index: 6;
}

.branding {
    padding: 10px 0 20px 0;
}

.branding p {
    color: #fff;
    position: relative;
    z-index: 6;
    text-align: center;
    text-decoration: none;
    line-height: 1.2em;
    margin: 0;
}

.branding a {
    color: var(--primary);
    text-decoration: none;
}

.branding a:hover {
    cursor: pointer;
    opacity: .5;
    text-decoration: none;
}

@media screen and (min-width: 600px) and (max-width: 1024px) {

    #contact {
        height: 250px;
    }

    .contact-group {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
            -ms-flex-direction: column;
                flex-direction: column;

    }

    .contact-group h2 {
        margin-bottom: 30px;
        font-size: 1.5625em;
    }

    .contact-button {
        margin: 10px auto !important;
        font-size: 1.25em;
    }

    .footer-item {
        width: 250px;
    }

}
/* ... */

